--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 
-version = '2.19.1-SNAPSHOT'
+version = '0.0.1'
 
 processResources.destinationDir = compileJava.destinationDir
 compileJava.dependsOn processResources
