--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,12 @@
 !gradle/wrapper/gradle-wrapper.jar
 
 ### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
+/.apt_generated
+/.classpath
+/.factorypath
+/.project
+/.settings
+/.springBeans
 
 ### IntelliJ IDEA ###
 .idea
