--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ processResources.destinationDir = compileJava.destinationDir
 compileJava.dependsOn processResources
 
 jar {
-    baseName = 'SpringBootDoma2FreeMarkerDemo'
+    baseName = 'test'
     version =  version
 }
 
@@ -36,22 +36,22 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-actuator-docs')
-	
+
 	compile('org.springframework.boot:spring-boot-starter-aop')
-	
+
 	compile('org.springframework.boot:spring-boot-starter-cache')
 	//	compile('org.freemarker:freemarker')
 	compile('org.springframework.boot:spring-boot-starter-freemarker')
-	
+
 	compile('org.springframework.boot:spring-boot-starter-integration')
 	compile('org.springframework.boot:spring-boot-starter-security')
 	compile('org.springframework.session:spring-session')
 	compile('org.springframework.boot:spring-boot-starter-validation')
-	
+
 
     compile("org.springframework.boot:spring-boot-devtools")
     compile("org.springframework.boot:spring-boot-configuration-processor")
-    
+
 	compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-jdbc")
 	compile("org.seasar.doma.boot:doma-spring-boot-starter:1.1.1")
@@ -67,7 +67,7 @@ dependencies {
 	testCompile("org.springframework.boot:spring-boot-starter-test")
 	// https://mvnrepository.com/artifact/dbunit/dbunit
 	testCompile("dbunit:dbunit:2.2")
-	
+
 }
 
 // ======== wrapper ========
