--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
   # for jar format
   http:
     encoding:
+      enabled: true
       charset: UTF-8
       force: true
       
@@ -40,6 +41,7 @@ spring:
     url: jdbc:h2:mem:testdb;MODE=MySQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     username: sa
     password: 
+    sql-script-encoding: UTF-8
 
   # session
   session:
