--- a/eclipse.gradle
+++ b/eclipse.gradle
@@ -1,67 +1,89 @@
 apply plugin: 'eclipse'
-ext { aptDir='.apt_generated' }
- 
+ext {
+	aptDir='.apt_generated'
+	javaVersion = "org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"
+}
+
 eclipse {
-    jdt.file.withProperties { it['org.eclipse.jdt.core.compiler.processAnnotations'] = 'enabled' }
+    // ネイチャーの追加
+    project {
+    	natures "org.springframework.ide.eclipse.core.springnature"
+    }
+
     classpath {
-        containers = [
-            'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
-        ]
+        // 依存している jar の source と javadoc をダウンロードする
+        downloadSources = true    // デフォルトは false
+        downloadJavadoc = true    // javadoc のパスは絶対パスになる
+
+        file {
+            beforeMerged { classpath ->
+                // classpath.entries.clear()
+                classpath.entries.removeAll { it.kind == "src" }
+                classpath.entries.removeAll { it.kind == "con" }
+            }
+
+            whenMerged { classpath ->
+                // 出力をeclipse準拠に変更
+                classpath.entries.findAll { it instanceof org.gradle.plugins.ide.eclipse.model.SourceFolder }*.output = ""
+                classpath.entries.findAll { it.kind == "con" && it.path.startsWith("org.eclipse.jdt.launching.JRE_CONTAINER")}*.path = "${javaVersion}"
+
+                // 重複エントリの削除
+                Map entryByPath = classpath.entries.groupBy { entry -> entry.path }
+                entryByPath.each { key, values ->
+                    if (values.size() > 1) {
+                        def entry = values.first()
+                        if (entry.kind == 'src') {
+                            entry.includes = []
+                            entry.excludes = []
+                        }
+                        int index = classpath.entries.indexOf entry
+                        logger.lifecycle "Removing ${values.collect { it.path }}"
+                        classpath.entries.removeAll values
+                        logger.lifecycle "Adding ${entry.path}"
+                        classpath.entries.add index, entry
+                    }
+                }
+            }
+            withXml { provider ->
+                def node = provider.asNode()
+                node.appendNode( 'classpathentry', [ kind: 'src', path: '.apt_generated'])
+            }
+        }
+        // １ディレクトリに出力する
+        classpath.defaultOutputDir = file("bin")
+
+    }
+    jdt {
+        file {
+            withProperties {properties ->
+                properties.setProperty('org.eclipse.jdt.core.compiler.processAnnotations', 'enabled')
+            }
+        }
     }
 }
- 
+
+
+// annotation
 eclipseJdt {
-    def clos = []
- 
-    def fp = file('.factorypath')
-    outputs.file fp
-    clos += {
-        fp.withWriter {
-            def domaJar = configurations.compile.find {
+	doLast {
+		file('.settings/org.eclipse.jdt.apt.core.prefs')
+		.withWriter { writer ->
+			def contents = """\
+				|eclipse.preferences.version=1
+				|org.eclipse.jdt.apt.aptEnabled=true
+				|org.eclipse.jdt.apt.genSrcDir=.apt_generated
+				|org.eclipse.jdt.apt.reconcileEnabled=true
+				|"""
+			writer << contents.stripMargin()
+		}
+        file('.factorypath').withWriter { writer ->
+            def domaJar = configurations.annotationProcessor.find {
                 it.name.startsWith('doma-2')
             }
-            new groovy.xml.MarkupBuilder(it).factorypath() {
+            new groovy.xml.MarkupBuilder(writer).factorypath() {
                 factorypathentry(kind:'EXTJAR', id:domaJar, enabled:true, runInBatchMode:false)
+                factorypathentry(kind:'PLUGIN', id:"org.eclipse.jst.ws.annotations.core", enabled:true, runInBatchMode:false)
             }
         }
     }
- 
-    def prefs = { name, contents ->
-        def f = file(".settings/$name")
-        clos += {
-            f.text = contents.stripMargin()
-        }
-        outputs.file f
-    }
- 
-    prefs 'org.eclipse.jdt.apt.core.prefs', """\
-        |eclipse.preferences.version=1
-        |org.eclipse.jdt.apt.aptEnabled=true
-        |org.eclipse.jdt.apt.genSrcDir=${aptDir}
-        |org.eclipse.jdt.apt.reconcileEnabled=true
-        |"""
- 
-    doLast { clos*.run() }
 }
-
-task eclipseSettings(type: Copy) {
-  from rootProject.files(
-    "eclipse/org.eclipse.jdt.ui.prefs")
-  into project.file('.settings/')
-  outputs.upToDateWhen { false }
-}
-
-task eclipseJdtPrepare(type: Copy) {
-  from rootProject.file("eclipse/org.eclipse.jdt.core.prefs")
-  into project.file(".settings/")
-  outputs.upToDateWhen { false }
-}
-
-task cleanEclipseJdtUi(type: Delete) {
-  delete project.file(".settings/org.eclipse.jdt.ui.prefs")
-  delete project.file(".settings/org.eclipse.jdt.core.prefs")
-}
-
-tasks["eclipseJdt"].dependsOn(eclipseJdtPrepare)
-tasks["cleanEclipse"].dependsOn(cleanEclipseJdtUi)
-tasks["eclipse"].dependsOn(eclipseSettings)
